--- a/configuration.ini
+++ b/configuration.ini
@@ -1,8 +1,8 @@
 [db]
-host = 34.90.65.41
-user = root
-password = R3sk6lqf
-db = creepy
+host = us-cdbr-east-02.cleardb.com
+user = b5f960db739924
+password = 691e3887
+db = heroku_0bac419e35bfd6e
 port = 3306
 
 [telegram]
