--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 appdirs==1.4.4
-beautifulsoup4==4.9.1
+beautifulsoup4==4.11.1
 bs4==0.0.1
-certifi==2020.6.20
-chardet==3.0.4
-distlib==0.3.1
-filelock==3.0.12
-idna==2.10
-parse==1.16.0
-PyMySQL==0.10.0
-requests==2.24.0
-six==1.15.0
-soupsieve==2.0.1
-urllib3==1.25.10
-virtualenv==20.0.28
+certifi==2022.6.15
+chardet==5.0.0
+distlib==0.3.5
+filelock==3.7.1
+idna==3.3
+parse==1.19.0
+requests==2.28.1
+six==1.16.0
+soupsieve==2.3.2.post1
+urllib3==1.26.11
+virtualenv==20.16.1
+psycopg2==2.9.3
