--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,5 @@ requests==2.28.1
 six==1.16.0
 soupsieve==2.3.2.post1
 urllib3==1.26.11
-virtualenv==20.16.1
-psycopg2==2.9.3
+virtualenv==20.16.3
+psycopg2-binary==2.9.3
